# zephyr-lora-test

./: .envrc.example  .gitignore  CMakeLists.txt  Makefile  README.md  prj.conf  zephyr.env
.github/workflows/: ci.yml
src/: main.c
